--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "desktop:prep": "npm run build",
+    "desktop:dev": "npm run desktop:prep && tauri dev",
+    "desktop:build": "tauri build",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -59,6 +62,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^4.0.0",
+    "@tauri-apps/cli": "^2.2.5",
     "typescript": "^5.6.3",
     "vitest": "^2.1.3"
   }
