chore: bump tauri version without release binaries

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pdfcraft-desktop"
-version = "0.1.0"
+version = "1.0.0-tauri"
 description = "PDFCraft desktop wrapper"
 authors = ["PDFCraft Team"]
 edition = "2021"
