--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdfcraft",
-  "version": "0.1.0",
+  "version": "1.0.0-tauri",
   "private": true,
   "type": "module",
   "scripts": {
